--- a/css/style.css
+++ b/css/style.css
@@ -245,5 +245,19 @@ width: 100%;
     background: url(../img/icons/menu.png);
     background-size: 100%;
 }
+.loader {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 100;
+}
+.loader .inner{
+    width: 100%;
+    height: 100%;
+    background: url(../img/load.gif)
+}
 
 
