--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ width: 100%;
 .loader .inner{
     width: 100%;
     height: 100%;
-    background: url(../img/load.gif)
+    background: url(../img/load0.gif)
 }
 
 
